cli/tests/testdata/report_error_handled.ts.out
1
{
  cancelable: true,
  message: "Uncaught Error: foo",
  filename: "[WILDCARD]/report_error_handled.ts",
  lineno: 13,
  colno: 13,
  error: Error: foo
    at [WILDCARD]/report_error_handled.ts:13:13
}
2
